# so-planner

./: .gitignore  BOM.xlsx  README.md  docker-compose.yml  machines.xlsx  plan of sales.xlsx  pyproject.toml  receipts.xlsx  requirements.txt  stock.xlsx
docs/: dependencies.md  netting_business_flow_ru.md  netting_cleanup.sql  netting_volume_ru.md
src/so_planner/: bom_versioning.py  cli.py  config.py  models.py  sales_plan_versioning.py  schemas.py
src/so_planner/analysis/: bottlenecks.py
src/so_planner/api/: app.py  deps.py
src/so_planner/api/routers/: bom.py  optimize.py  plans.py  sales_plans.py
src/so_planner/db/: __init__.py  models.py
src/so_planner/export/: report.py
src/so_planner/ingest/: loader.py
src/so_planner/optimization/: __init__.py
src/so_planner/optimize/: ga.py  jobshop.py  milp.py  volume_milp.py
src/so_planner/scheduling/: greedy_scheduler.py  utils.py
src/so_planner/scheduling/greedy/: __init__.py  bom.py  demand.py  export.py  loaders.py  netting.py  timeline.py
src/so_planner/ui/: app.js  index.html
